# agilahost-manage-manager

./: .gitignore  CMakeLists.txt  manager.cbp
include/: TCPServer.hpp  includes.hpp
src/: TCPServer.cpp  main.cpp
